fix(form): 修复align对齐方式报错

--- a/style/components/image/index.scss
+++ b/style/components/image/index.scss
@@ -9,6 +9,10 @@
   // 消除空白幽灵节点
   vertical-align: middle;
   /* #endif */
+
+  &--errored {
+    display: none;
+  }
 }
 
 .fta-image--circle {
